# PyKOpeningHours

./: CMakeLists.txt  PyKOpeningHours.pyi  README.md  pykopeninghours.cpp  python_qt_wrappers.cpp  python_qt_wrappers.h  setup.py  test.py
PyKOpeningHours/: pykopeninghours.cpp
lib/: dummy.txt
